# avl_test_setup

./: .gitignore  README.md  main.py  pyproject.toml  setup_env.sh
.github/workflows/: regression.yml
hdl/: my_design.sv  top_tb.sv
tests/: Makefile  test_avl_simple.py  test_my_design.py  test_runner.py
